--- a/index.html
+++ b/index.html
@@ -1,41 +1,23 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<title> Titulo do site </title>
-	<meta charset="utf-8">
-	<meta name="description" content="Descrição do site">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Flying helicopter</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
-<body style="background-color:#F7F2DE">
-
-<div style="background-color:#ff0000"></div>
-<div style="background-color:#ffff00"></div>
-<div style="background-color:#00ff00"></div>
-<div style="background-color:#00ffff"></div>
-<div style="background-color:#0000ff"></div>
-
-	<h1> <p> Wikipédia até a lua </p> </h1>
-
-	<h2> <p> <mark> Cachorro Dock </mark> </p> </h2>
-	O cachorro 1 tem cara de ursinho <br />
-	<img src="dock.jpg">
-
-	<h2> <p> <mark> Cachorro 2 </mark> </p> </h2>
-	O <mark style="color: red";>cachorro 2</mark> tem cara de <del> ursinho  </del> cachorro <br />
-	<img src="dock.jpg">
-        
-      <h2> <p> <mark> Cachorro Dock 3 </mark> </p> </h2>
-	O <mark style="color: red";>Dock 2</mark> é um<del> ursinho  </del> cachorro <br />
-	<img src="dock.jpg">
-
-<h1 style="color:#ff0000">Heading</h1>
-<h1 style="color:#ffff00">Heading</h1>
-<h1 style="color:#00ff00">Heading</h1>
-<h1 style="color:#00ffff">Heading</h1>
-<h1 style="color:#0000ff">Heading</h1>
-
+<body>
+    <main class="helicopter">
+        <div class="cockpit"></div>
+        <div class="tail"></div>
+        <div class="main"></div>
+        <div class="rotor">
+            <div class="rotator">
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+    </main>
 </body>
-
 </html>
